# tablo-legacy-m3u

./: .actrc  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  vite.config.js
.act/: .act-payload.json
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: ci.yaml  docker-test.yaml  markdownlint.yaml  release.yaml  shellcheck.yaml
scripts/: vendor.sh
src/tablo_legacy_m3u/: __init__.py  app.py  config.py  main.py  tablo_client.py  tablo_types.py
tablo_legacy_m3u/: __init__.py  __main__.py  _version.py  app.py  app_state.py  config.py  discover.py  epg.py  filters.py  lineup.py  m3u.py  main.py  routes.py  scheduler.py  tablo_client.py  tablo_types.py  version_check.py  vite.py
tablo_legacy_m3u/static/src/: main.js  style.css
tablo_legacy_m3u/templates/: _device_rows.html  _status_rows.html  _tuners.html  index.html
tests/: __init__.py  conftest.py  helpers.py  test_app.py  test_app_state.py  test_config.py  test_discover.py  test_epg.py  test_filters.py  test_init.py  test_lineup.py  test_m3u.py  test_main.py  test_routes.py  test_routes_partials.py  test_scheduler.py  test_tablo_client.py  test_tablo_client_caching.py  test_tablo_client_resilience.py  test_version.py  test_version_check.py  test_vite.py
