[project]
name = "tablo-legacy-m3u"
version = "0.1.0"
description = "TabloTV M3U & EPG generator for legacy devices."
requires-python = ">=3.12"
dependencies = ["flask>=3.1.3", "requests>=2.32.5", "rich>=14.3.3"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "responses>=0.26.0",
    "ruff>=0.15.7",
    "typeguard>=4.5.1",
    "types-requests>=2.32.4.20260324",
]

[tool.mypy]
strict = true
pretty = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["./tests"]
log_level = "DEBUG"

[tool.ruff]
line-length = 88
preview = true
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "EM",   # flake8-errmsg
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "B",    # flake8-bugbear
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "T20",  # flake8-print
    "TD",   # flake8-todos
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "PTH",  # flake8-use-pathlib
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tablo_legacy_m3u/__init__.py" = [
    "RUF067", # ruff: Flask app factory convention requires code in __init__.py
]
"tests/**" = [
    "D102",    # pydocstyle: ignore missing docstring in test methods
    "PLR6301", # pylint: ignore unused self in test methods
    "S101",    # bandit: ignore use of assert in tests
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
